--- a/Split_It/ExpenseDetail.xaml
+++ b/Split_It/ExpenseDetail.xaml
@@ -43,9 +43,9 @@
                     <StackPanel Grid.Row="0" Orientation="Horizontal">
                         <Image Source="{Binding payment, Converter={StaticResource PaymentImageConverter}}" Width="70" Height="80" Margin="8,0"/>
                         <StackPanel Orientation="Vertical">
-                            <TextBlock x:Name="tbTitle" TextWrapping="Wrap" Text="{Binding description}" Foreground="Black" FontSize="{StaticResource userDetailnameSize}" HorizontalAlignment="Left" MaxWidth="350"/>
-                            <TextBlock x:Name="tbAmount" Text="{Binding Converter={StaticResource ExpenseAmountCurrencyConverter}}" Foreground="Black" Grid.Row="1" FontSize="{StaticResource amountSize}" HorizontalAlignment="Left" FontWeight="Bold"/>
-                            <TextBlock x:Name="tbDate" Foreground="{StaticResource settled}" Grid.Row="2" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Left">
+                            <TextBlock x:Name="tbTitle" TextWrapping="Wrap" Text="{Binding description}" Foreground="Black" FontSize="{StaticResource userDetailnameSize}" HorizontalAlignment="Left" MaxWidth="400"/>
+                            <TextBlock x:Name="tbAmount" Text="{Binding Converter={StaticResource ExpenseAmountCurrencyConverter}}" Foreground="Black" FontSize="{StaticResource amountSize}" HorizontalAlignment="Left" FontWeight="Bold"/>
+                            <TextBlock x:Name="tbDate" TextWrapping="Wrap" Foreground="{StaticResource settled}" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Left" MaxWidth="400">
                                 <TextBlock.Inlines>
                                     <Run Text="Added by" />
                                     <Run Text="{Binding created_by.name}" />
