prevent user from keying in decimal twice

--- a/Split_It/UserControls/MultiplePayeeInputPopUpControl.xaml
+++ b/Split_It/UserControls/MultiplePayeeInputPopUpControl.xaml
@@ -63,6 +63,7 @@
                                 MinWidth="50"
                                 Grid.Column="3" 
                                 Foreground="Black"
+                                KeyDown="tbAmount_KeyDown"
                                 InputScope="Number"
                                 VerticalAlignment="Center"
                                 FontSize="{StaticResource amountSize}" 
