--- a/Split_It/UserControls/ExpenseUserControl.xaml
+++ b/Split_It/UserControls/ExpenseUserControl.xaml
@@ -380,8 +380,8 @@
         </Style>
         <Style x:Key="PickerBoxToggleButtonStyle1" TargetType="PickerBox:PickerBoxToggleButton">
             <Setter Property="telerik:InteractionEffectManager.IsInteractionEnabled" Value="True"/>
-            <Setter Property="Padding" Value="8, 8, 8, 7"/>
-            <Setter Property="BorderThickness" Value="3"/>
+            <Setter Property="Padding" Value="8"/>
+            <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMedium}"/>
             <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilyNormal}"/>
             <Setter Property="Background" Value="Transparent"/>
@@ -491,7 +491,7 @@
                     </StackPanel>
                 </Border>
 
-                <Border Padding="0,10" Grid.Row="1" BorderThickness="0,0,0,2" BorderBrush="{StaticResource splitwiseGreyBG}">
+                <Border Padding="0,12" Grid.Row="1" BorderThickness="0,0,0,2" BorderBrush="{StaticResource splitwiseGreyBG}">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -509,7 +509,7 @@
                         HorizontalContentAlignment="Center"
                         Style="{StaticResource RadListPickerStyle1}" />
 
-                        <Grid Grid.Row="0" Margin="0,0,0,10">
+                        <Grid Grid.Row="0" Margin="0,0,0,12">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
@@ -571,7 +571,7 @@
                     BorderThickness="0,0,0,2" 
                     BorderBrush="{StaticResource splitwiseGreyBG}">
 
-                    <Grid Margin="15">
+                    <Grid Margin="12,24">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -589,7 +589,7 @@
                                    Text="Paid by"/>
 
                         <Border BorderThickness="2" 
-                                Margin="10,0"
+                                Margin="12,0"
                                 Grid.Column="1"
                                 BorderBrush="{StaticResource splitwiseGreyBG}">
 
@@ -604,7 +604,7 @@
                         </Border>
                     </Grid>
 
-                    <Grid Grid.Row="1" Margin="0,10,0,0">
+                    <Grid Grid.Row="1" Margin="0,12,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
@@ -638,6 +638,7 @@
 
                 <telerikPrimitives:RadTextBox Grid.Row="4" 
 				x:Name="tbDetails"
+                Margin="0,-12,0,12"
                 MinHeight="150"
 				BorderThickness="0"
                 InputScope="Text"
