--- a/Split_It/UserControls/ExpenseUserControl.xaml
+++ b/Split_It/UserControls/ExpenseUserControl.xaml
@@ -579,7 +579,7 @@
 
                     <Grid Grid.Row="0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="108"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
@@ -589,7 +589,7 @@
                                    Text="Paid by"/>
 
                         <Border BorderThickness="2" 
-                                Margin="12,0"
+                                Margin="12,0,0,0"
                                 Grid.Column="1"
                                 BorderBrush="{StaticResource splitwiseGreyBG}">
 
@@ -606,7 +606,7 @@
 
                     <Grid Grid.Row="1" Margin="0,12,0,0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="108"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         
