--- a/Split_It/MainPage.xaml
+++ b/Split_It/MainPage.xaml
@@ -43,8 +43,9 @@
                         <DataTemplate>
                             <TextBlock Foreground="Red"
                                        Text="No balance found."
+                                       Margin="12"
                                        TextWrapping="Wrap"
-                                       VerticalAlignment="Center"
+                                       VerticalAlignment="Top"
                                        HorizontalAlignment="Center"
                                        FontSize="{StaticResource nameSize}"/>
                         </DataTemplate>
@@ -90,8 +91,9 @@
                             <TextBlock Foreground="Red"
                                        Text="No expenses found."
                                        TextWrapping="Wrap"
-                                       VerticalAlignment="Center"
-                                       HorizontalAlignment="Center"
+                                       Margin="12"
+                                       VerticalAlignment="Top"
+                                       HorizontalAlignment="Left"
                                        FontSize="{StaticResource nameSize}"/>
                         </DataTemplate>
                     </telerikPrimitives:RadDataBoundListBox.EmptyContentTemplate>
@@ -108,8 +110,9 @@
                             <TextBlock Foreground="Red"
                                        Text="No groups found."
                                        TextWrapping="Wrap"
-                                       VerticalAlignment="Center"
-                                       HorizontalAlignment="Center"
+                                       Margin="12"
+                                       VerticalAlignment="Top"
+                                       HorizontalAlignment="Left"
                                        FontSize="{StaticResource nameSize}"/>
                         </DataTemplate>
                     </telerikPrimitives:RadDataBoundListBox.EmptyContentTemplate>
