--- a/Split_It/MainPage.xaml
+++ b/Split_It/MainPage.xaml
@@ -165,16 +165,16 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
-                        <Grid Grid.Row="0" >
+                        <Grid Grid.Row="0" Margin="12">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <Image Grid.Column="0" 
                                    Source="{Binding PictureUrl, Converter={StaticResource JetImageLoaderConverter}}"
-                                   VerticalAlignment="Center"  Margin="12"/>
+                                   VerticalAlignment="Top"/>
 
-                            <Grid Grid.Column="1" VerticalAlignment="Center">
+                            <Grid Grid.Column="1" Margin="12,6,0,0">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="Auto"/>
