--- a/Split_It/Add_Expense_Pages/AddPayment.xaml
+++ b/Split_It/Add_Expense_Pages/AddPayment.xaml
@@ -53,7 +53,7 @@
 
 				<StackPanel Grid.Column="1" Orientation="Vertical" Margin="15,0" HorizontalAlignment="Center">
 					<TextBlock Foreground="Black" Text="Paid" FontSize="{StaticResource amountSize}" HorizontalAlignment="Center" Margin="-10,0,0,0"/>
-					<StackPanel Orientation="Horizontal" Margin="0,-15,0,0">
+                    <StackPanel Orientation="Horizontal" Margin="0,-15,0,0" HorizontalAlignment="Center">
 						<TextBlock x:Name="tbCurrency" Text="SGD" Foreground="Black" FontSize="{StaticResource amountSize}" FontWeight="Bold" VerticalAlignment="Center"/>
 						<TextBox x:Name="tbAmount" Text="43.21" Foreground="Black" FontSize="{StaticResource amountSize}" FontWeight="Bold" BorderThickness="0" InputScope="Number" Margin="-10,0,0,0" Background="White" KeyDown="tbAmount_KeyDown"/>
 					</StackPanel>
