--- a/Split_It/Split_It/App.xaml
+++ b/Split_It/Split_It/App.xaml
@@ -8,7 +8,7 @@
     xmlns:vm="using:Split_It.ViewModel"
 	xmlns:ignore="http://www.galasoft.ch/ignore"
     mc:Ignorable="d ignore"
-    RequestedTheme="Dark">
+    RequestedTheme="Light">
 
     <Application.Resources>
        <!--Global View Model Locator-->
