cache user details

--- a/Split_It/Split_It/Skins/MainViewSkin.xaml
+++ b/Split_It/Split_It/Skins/MainViewSkin.xaml
@@ -459,4 +459,8 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <DataTemplate x:Key="FriendsTemplate">
+        
+    </DataTemplate>
 </ResourceDictionary>
