--- a/Split_It/Split_It/MainPage.xaml
+++ b/Split_It/Split_It/MainPage.xaml
@@ -1,11 +1,13 @@
 ﻿<Page
-    x:Class="Split_It.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Split_It"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    DataContext="{Binding MainVM, Source={StaticResource Locator}}"
+    xmlns:pr="using:PullToRefresh.UWP"
+    xmlns:winux="using:WinUX.Xaml.Converters"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
+    x:Class="Split_It.MainPage"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -13,11 +15,16 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Skins/MainViewSkin.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <winux:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         </ResourceDictionary>
     </Page.Resources>
 
+    <Page.DataContext>
+        <Binding Path="MainVM" Source="{StaticResource Locator}"/>
+    </Page.DataContext>
+
     <SplitView x:Name="MySplitView" DisplayMode="Inline" IsPaneOpen="False" 
-               Background="{StaticResource ApplicationPageBackgroundThemeBrush}" OpenPaneLength="150">
+		Background="{StaticResource ApplicationPageBackgroundThemeBrush}" OpenPaneLength="150">
         <SplitView.Pane>
             <Grid Background="{StaticResource splitwiseGreyBG}">
                 <Grid.RowDefinitions>
@@ -39,25 +46,27 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                    <!--For ad-->
                 </Grid.RowDefinitions>
                 <RelativePanel Grid.Row="0" Background="{StaticResource splitwiseGreen}">
                     <Button FontFamily="Segoe MDL2 Assets" 
-                            Foreground="White"
-                            Content="&#xE700;"
-                            Width="50" Height="50" 
-                            Background="Transparent" 
-                            Click="HamburgerButton_Click" Style="{StaticResource NoBorderSelectButton}"/>
+						Foreground="White"
+						Content="&#xE700;"
+						Width="50" Height="50" 
+						Background="Transparent" 
+						Click="HamburgerButton_Click" Style="{StaticResource NoBorderSelectButton}"/>
 
                     <TextBlock Text="{Binding CurrentUser.FirstName}" Foreground="White"
-                               Name="NameHolder" 
-                               RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="10,0"/>
+						x:Name="NameHolder" 
+						RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="10,0"/>
                     <Ellipse Width="38" Height="38"
-                             RelativePanel.AlignVerticalCenterWithPanel="True" RelativePanel.LeftOf="NameHolder">
+						RelativePanel.AlignVerticalCenterWithPanel="True" RelativePanel.LeftOf="NameHolder">
                         <Ellipse.Fill>
                             <ImageBrush>
                                 <ImageBrush.ImageSource>
                                     <BitmapImage DecodePixelHeight="38" DecodePixelWidth="38" 
-                                                 UriSource="{Binding CurrentUser.Picture.Medium}" />
+										UriSource="{Binding CurrentUser.Picture.Medium}" />
                                 </ImageBrush.ImageSource>
                             </ImageBrush>
                         </Ellipse.Fill>
@@ -66,7 +75,23 @@
 
                 <Pivot Grid.Row="1" Style="{StaticResource TabsStylePivotStyle}">
                     <PivotItem Header="Friends">
-                        <Grid/>
+                        <pr:PullToRefreshBox>
+                            <pr:PullToRefreshBox.TopIndicatorTemplate>
+                                <DataTemplate>
+                                    <pr:PullRefreshProgressControl Progress="{Binding}" 
+										PullToRefreshText="Pull to Refresh"
+										ReleaseToRefreshText="Release To Refresh"/>
+                                </DataTemplate>
+                            </pr:PullToRefreshBox.TopIndicatorTemplate>
+
+                            <ListView ItemsSource="{Binding FriendsList}"
+								ItemTemplate="{StaticResource FriendsTemplate}"/>
+                            <Interactivity:Interaction.Behaviors>
+                                <Core:EventTriggerBehavior EventName="RefreshInvoked">
+                                    <Core:InvokeCommandAction Command="{Binding RefreshDataCommand, Mode=OneWay}"/>
+                                </Core:EventTriggerBehavior>
+                            </Interactivity:Interaction.Behaviors>
+                        </pr:PullToRefreshBox>
                     </PivotItem>
 
                     <PivotItem Header="Groups">
@@ -77,8 +102,13 @@
                         <Grid/>
                     </PivotItem>
                 </Pivot>
+
+                <Canvas Background="DarkGray" Opacity="0.5" 
+					Grid.Row="1"
+					Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                <ProgressRing IsActive="{Binding IsBusy}" Grid.Row="1"/>
             </Grid>
-            
+
         </SplitView.Content>
     </SplitView>
 </Page>
