--- a/Split_It/Split_It/MainPage.xaml
+++ b/Split_It/Split_It/MainPage.xaml
@@ -6,6 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:pr="using:PullToRefresh.UWP"
     xmlns:winux="using:WinUX.Xaml.Converters"
+    xmlns:con_bal="using:Split_It.Converter.UserBalance"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     x:Class="Split_It.MainPage"
     mc:Ignorable="d">
@@ -16,6 +17,7 @@
                 <ResourceDictionary Source="Skins/MainViewSkin.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <winux:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+            <con_bal:TextAmountConverter x:Key="UserBalanceTextAmountConverter"/>
         </ResourceDictionary>
     </Page.Resources>
 
@@ -57,41 +59,61 @@
 						Background="Transparent" 
 						Click="HamburgerButton_Click" Style="{StaticResource NoBorderSelectButton}"/>
 
-                    <TextBlock Text="{Binding CurrentUser.FirstName}" Foreground="White"
+                    <TextBlock Text="{Binding CurrentUser.Name}" Foreground="White"
 						x:Name="NameHolder" 
 						RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="10,0"/>
-                    <Ellipse Width="38" Height="38"
+                    <Ellipse Width="40" Height="40"
 						RelativePanel.AlignVerticalCenterWithPanel="True" RelativePanel.LeftOf="NameHolder">
                         <Ellipse.Fill>
-                            <ImageBrush>
-                                <ImageBrush.ImageSource>
-                                    <BitmapImage DecodePixelHeight="38" DecodePixelWidth="38" 
-										UriSource="{Binding CurrentUser.Picture.Medium}" />
-                                </ImageBrush.ImageSource>
-                            </ImageBrush>
+                            <ImageBrush ImageSource="{Binding CurrentUser.Picture.Medium}"/>
                         </Ellipse.Fill>
                     </Ellipse>
                 </RelativePanel>
 
                 <Pivot Grid.Row="1" Style="{StaticResource TabsStylePivotStyle}">
                     <PivotItem Header="Friends">
-                        <pr:PullToRefreshBox>
-                            <pr:PullToRefreshBox.TopIndicatorTemplate>
-                                <DataTemplate>
-                                    <pr:PullRefreshProgressControl Progress="{Binding}" 
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <ComboBox HorizontalAlignment="Right" Margin="0,10" Width="100"/>
+                            <pr:PullToRefreshBox Grid.Row="1">
+                                <pr:PullToRefreshBox.TopIndicatorTemplate>
+                                    <DataTemplate>
+                                        <pr:PullRefreshProgressControl Progress="{Binding}" 
 										PullToRefreshText="Pull to Refresh"
 										ReleaseToRefreshText="Release To Refresh"/>
-                                </DataTemplate>
-                            </pr:PullToRefreshBox.TopIndicatorTemplate>
+                                    </DataTemplate>
+                                </pr:PullToRefreshBox.TopIndicatorTemplate>
 
-                            <ListView ItemsSource="{Binding FriendsList}"
-								ItemTemplate="{StaticResource FriendsTemplate}"/>
-                            <Interactivity:Interaction.Behaviors>
-                                <Core:EventTriggerBehavior EventName="RefreshInvoked">
-                                    <Core:InvokeCommandAction Command="{Binding RefreshDataCommand, Mode=OneWay}"/>
-                                </Core:EventTriggerBehavior>
-                            </Interactivity:Interaction.Behaviors>
-                        </pr:PullToRefreshBox>
+                                <ListView ItemsSource="{Binding FriendsList}">
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <RelativePanel Height="70">
+                                                <Ellipse Height="40" Width="40" x:Name="image"
+                                                     RelativePanel.AlignVerticalCenterWithPanel="True">
+                                                    <Ellipse.Fill>
+                                                        <ImageBrush ImageSource="{Binding Picture.Medium}"/>
+                                                    </Ellipse.Fill>
+                                                </Ellipse>
+                                                <TextBlock Text="{Binding Name}" 
+                                                       RelativePanel.AlignVerticalCenterWith="image"
+                                                       RelativePanel.RightOf="image" Margin="15,0,0,0"/>
+                                                <TextBlock RelativePanel.AlignRightWithPanel="True"
+                                                           RelativePanel.AlignVerticalCenterWithPanel="True"
+                                                           Text="{Binding Balance, Converter={StaticResource UserBalanceTextAmountConverter}}"/>
+                                            </RelativePanel>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
+                                <Interactivity:Interaction.Behaviors>
+                                    <Core:EventTriggerBehavior EventName="RefreshInvoked">
+                                        <Core:InvokeCommandAction Command="{Binding RefreshDataCommand, Mode=OneWay}"/>
+                                    </Core:EventTriggerBehavior>
+                                </Interactivity:Interaction.Behaviors>
+                            </pr:PullToRefreshBox>
+                        </Grid>
                     </PivotItem>
 
                     <PivotItem Header="Groups">
